--- a/src/main/resources/templates/purchaseorder/orderget.html
+++ b/src/main/resources/templates/purchaseorder/orderget.html
@@ -39,31 +39,31 @@
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">상호</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="A상사" disabled>
+                                    <input type="text" class="form-control" id="purchaserName" disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">담당자</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="OOO 사장님" disabled>
+                                    <input type="text" class="form-control" id="purchaserManager" disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">전화</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="010-1234-5678" disabled>
+                                    <input type="text" class="form-control" id="purchaserManagerTel" disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">팩스</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="-" disabled>
+                                    <input type="text" class="form-control" id="purchaserManagerFax" disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">이메일</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="Aaa@aaa.com" disabled>
+                                    <input type="text" class="form-control" id="purchaserManagerEmail" disabled>
                                 </div>
                             </div>
 
@@ -81,31 +81,31 @@
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">상호</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="정감" disabled>
+                                    <input type="text" class="form-control" id="ourCompanyName" disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">담당자</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="OOO 부장" disabled>
+                                    <input type="text" class="form-control"  disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">전화</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="010-9876-5432" disabled>
+                                    <input type="text" class="form-control"  disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">팩스</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="-" disabled>
+                                    <input type="text" class="form-control"  disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">이메일</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" value="Mmm@mmm.com" disabled>
+                                    <input type="text" class="form-control"  disabled>
                                 </div>
                             </div>
 
@@ -133,7 +133,7 @@
                                 <div class="row mb-3">
                                     <label for="inputText" class="col-sm-2 col-form-label">납품장소</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" value="경기도 수원시 어쩌구 저쩌구 1층 창고">
+                                        <input type="text" class="form-control" id="ourCompanyrAddress">
                                     </div>
                                 </div>
 
@@ -177,6 +177,21 @@
     </main>
     <script th:inline="javascript">
         $(document).ready(function (e) {
+            function getOurCompany(){
+                var ourCompanyCode = "PCC-1";
+                console.log("우리회사코드는",ourCompanyCode);
+                $.getJSON("/purchasercontent/" + ourCompanyCode, function(data) {
+                    var ourCompanyName=data.purchaserName;
+                    console.log("우리회사이름은",ourCompanyName);
+                    var ourCompanyrAddress=data.purchaserAddress;
+                    $('#ourCompanyName').val(ourCompanyName);
+                    $('#ourCompanyrAddress').val(ourCompanyrAddress);
+                }).fail(function(jqxhr, textStatus, error) {
+                    var err = textStatus + ", " + error;
+                    console.log("자사정보 요청 실패: " + err);
+                });
+            }
+
 
             var purchaseOrderCode = [[${purchaseOrderCode}]];
 
@@ -204,18 +219,29 @@
                     var materialName=material.materialName;
                     var materialStand =material.materialStand;
                     var materialTexture =material.materialTexture;
-
                     $('#materialName').val(materialName);
                     $('#materialStandTexture').val(materialStand+'/'+materialTexture);
 
+                    var purchaser=material.contractDTO.purchaserDTO;
+                    var purchaserName=purchaser.purchaserName;
+                    var purchaserManager=purchaser.purchaserManager;
+                    var purchaserManagerTel=purchaser.purchaserManagerTel;
+                    var purchaserManagerEmail=purchaser.purchaserManagerEmail;
+                    var purchaserManagerFax=purchaser.purchaserManagerFax;
+                    $('#purchaserName').val(purchaserName);
+                    $('#purchaserManager').val(purchaserManager);
+                    $('#purchaserManagerTel').val(purchaserManagerTel);
+                    $('#purchaserManagerEmail').val(purchaserManagerEmail);
+                    $('#purchaserManagerFax').val(purchaserManagerFax);
 
                 }).fail(function(jqxhr, textStatus, error) {
                     var err = textStatus + ", " + error;
-                    console.log("요청 실패: " + err);
+                    console.log("발주 정보 요청 실패: " + err);
                 });
             }
             // 함수 호출
             getPurchaseOrderContent();
+            getOurCompany();
         });
     </script>
     <!-- End #main -->
