--- a/src/main/resources/templates/purchaseorder/purchaseOrderList.html
+++ b/src/main/resources/templates/purchaseorder/purchaseOrderList.html
@@ -30,11 +30,139 @@
         <section class="section dashboard">
             <div class="row">
                 <!--★★★★★★★★★★카드내용★★★★★★★★★★★★-->
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">발주리스트</h5>
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingOne">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <b>보기 | 구분 : 전체 | 검수계획등록 : 전체 | 발주일 : 전체 | 납기일 : 전체 </b>
+                                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                            <b>검색 | 전체 : -</b>
+                                        </button>
+                                    </h2>
+                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                         data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <div class="row mb-3">
+                                                <label for="inputText" class="col-sm-1 col-form-label">구분</label>
+                                                <div class="col-sm-2">
+                                                    <select class="form-select" aria-label="Default select example">
+                                                        <option selected>전체</option>
+                                                        <option value="1">미발주</option>
+                                                        <option value="2">발주완료</option>
+                                                        <option value="3">발주마감</option>
+                                                    </select>
+                                                </div>
+                                                <label for="inputText" class="col-sm-1 col-form-label">검수계획등록</label>
+                                                <div class="col-sm-2">
+                                                    <select class="form-select" aria-label="Default select example">
+                                                        <option selected>전체</option>
+                                                        <option value="1">등록</option>
+                                                        <option value="2">-</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <label for="inputText" class="col-sm-1 col-form-label">발주일</label>
+                                                <div class="col-sm-2">
+                                                    <input type="date" class="form-control">
+                                                </div>
+                                                ~
+                                                <div class="col-sm-2">
+                                                    <input type="date" class="form-control">
+                                                </div>
+                                                <label for="inputText" class="col-sm-1 col-form-label">납기일</label>
+                                                <div class="col-sm-2">
+                                                    <input type="date" class="form-control">
+                                                </div>
+                                                ~
+                                                <div class="col-sm-2">
+                                                    <input type="date" class="form-control">
+                                                </div>
+                                            </div>
+                                            <hr>
+                                            <div class="row mb-3">
+                                                <label for="inputText" class="col-sm-1 col-form-label">검색</label>
+                                                <div class="col-sm-2">
+                                                    <select class="form-select" aria-label="Default select example">
+                                                        <option selected>전체</option>
+                                                        <option value="1">품목명</option>
+                                                        <option value="2">품목코드</option>
+                                                        <option value="3">거래처명</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-sm-9">
+                                                    <div class="input-group mb-3">
+                                                        <input type="text" class="form-control" id="itemCodeInput">
+                                                        <button class="input-group-text" id="confirmSelectionBtn">검색</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- End Default Accordion Example -->
+                            <br>
+                            <a href="plan_product_insert.html"><button type="button" class="btn btn-primary btn-sm">제품등록</button></a>
+                            <!-- Table with hoverable rows -->
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">구분</th>
+                                    <th scope="col">자재명</th>
+                                    <th scope="col">수량</th>
+                                    <th scope="col">총액</th>
+                                    <th scope="col">거래처명</th>
+                                    <th scope="col">검수계획</th>
+                                    <th scope="col">발주일</th>
+                                    <th scope="col">납기일</th>
+                                </tr>
+                                </thead>
+                                <tbody id="purchaseOrderList">
+                                </tbody>
+                            </table>
+                            <!-- End Table with hoverable rows -->
+                        </div>
+                    </div>
+                </div>
                 <!--여기에 카드랑 내용 넣어주시면 됩니다-->
             </div> <!--End row-->
         </section>
     </main>
     <!-- End #main -->
+    <script th:inline="javascript">
+        $(document).ready(function (e) {
+            console.log("자바스크립트작동")
+            function getPurchaseOrderContent() {
+                $.getJSON("/purchaseordercontent/allList", function(arr) {
+                    // console.log("요청", arr);
+                    var str ="";
+                    $.each(arr,function (idx,dto) {
+                        str += '<tr>'
+                        str += '<th scope="row">'+(idx+1)+'</th>'
+                        str += '<td>'+dto.purchaseOrderStatus+'</td>'
+                        str += '<td><a href="purchaseOrderGet?purchaseOrderCode='+dto.purchaseOrderCode+'">'+dto.procurementPlanDTO.temMaterialDTO.materialName+'</a></td>'
+                        str += '<td>'+dto.procurementPlanDTO.procurementPlanQuantity+'</td>'
+                        str += '<td>'+(dto.procurementPlanDTO.procurementPlanQuantity*dto.procurementPlanDTO.temMaterialDTO.contractDTO.contractPrice)+'</td>'
+                        str += '<td>'+dto.procurementPlanDTO.temMaterialDTO.contractDTO.purchaserDTO.purchaserName+'</td>'
+                        str += '<td>'+dto.inspectionPlanDTOList.length+'</td>'
+                        str += '<td>'+dto.purchaseOrderDate+'</td>'
+                        str += '<td>'+dto.procurementPlanDTO.procurementPlanDeadLine+'</td>'
+                        str += '</tr>'
+                    })
+                    console.log('이게 str',str)
+                    $("#purchaseOrderList").html(str);
+                })
+            }
+
+            getPurchaseOrderContent();
+        })
+    </script>
     <th:block th:replace="~{/fragments/bodyFragment::footer}"></th:block>
     <th:block th:replace="~{/fragments/bodyFragment::js}"></th:block>
 </body>
